:construction: Implement header according to the wireframe and implement the services into the CMS

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,6 +12,7 @@
     "@repo/react-utils": "*",
     "@repo/ui": "*",
     "@strapi/blocks-react-renderer": "^1.0.0",
+    "@tanstack/react-query": "^5.45.1",
     "next": "^14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
