--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@repo/eslint-config": "*",
     "@repo/typescript-config": "*",
     "prettier": "^3.2.4",
-    "turbo": "1.10.4"
+    "turbo": "^2.0.4"
   },
   "engines": {
     "node": ">=18"
@@ -19,5 +19,6 @@
   "workspaces": [
     "apps/*",
     "packages/*"
-  ]
+  ],
+  "packageManager": "npm@10.8.1"
 }
